# adv_cpp

./: .gitignore  README.md
BoostAsio_Server&Client/asio_tcp_async_client/: asio_tcp_async_client.sln
BoostAsio_Server&Client/asio_tcp_async_client/Debug/: asio_tcp_async_client.ilk
BoostAsio_Server&Client/asio_tcp_async_client/asio_tcp_async_client/: ReadMe.txt  asio_tcp_async_client.vcxproj  asio_tcp_async_client.vcxproj.filters  tcp_client.h
BoostAsio_Server&Client/asio_tcp_async_server/: ReadMe.txt  asio_tcp_async_server.sln  asio_tcp_async_server.vcxproj  asio_tcp_async_server.vcxproj.filters  log_server.cpp  log_server.h  session.h
BoostAsio_Server&Client/cmake/client/: CMakeLists.txt
BoostAsio_Server&Client/cmake/client/src/: main.cpp  tcp_client.cpp
BoostAsio_Server&Client/cmake/server/: CMakeLists.txt
BoostAsio_Server&Client/cmake/server/src/: log_server.cpp  main.cpp  session.h
BoostAsio_Server&Client/server_src/: Makefile  log_server.h  session.cpp
DynamicallyLoadedLib/: Makefile  liblist.so.1.0.0  liblist_debug.so.1.0.0  liblist_fulldebug.so.1.0.0  list.h  main.cpp
DynamicallyLoadedLib/lib_src/: Makefile  list.cpp  list.h  listBase.h
ListOnAllocators/: LAB_2014_03_27.h  list.h  list.inl
ListOnAllocatorsWDbg/: LAB_2014_03_27.cpp  Makefile  list.h  list.inl
StaticDispatchInterface/: full_static.cpp  not_full_static.cpp
WhatsBestInCpp11/: Makefile  helpers.h  main.cpp
expr/: expression.cpp
